css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    
  font: normal 100%/1.5 sans-serif; 
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {

    html {
        font-size: 110%;
    }

}

@media only screen and (min-width: 90em) {

    html {
        font-size: 120%;
    }

}

@media only screen and (min-width: 120em) {

    html {
        font-size: 130%;
    }

}

*, *:before, *:after {
    box-sizing: inherit;

}
.awesome {
    float: left;
    margin-top: 1rem;
}

.deserve {
    float: left;
    display: inline-block;
    padding-top: 1rem;
    text-align: left;
}

.table { 
    padding-bottom: 1rem;
    padding-top: 1rem;
}

img {
    margin: auto;
    width: 100%;
}

.top {
    padding-bottom: 5%;

}

.talent {
    padding: 0;
    margin: 0;
    text-align: left;
}

.radio {
    white-space: nowrap;
    display: inline-block;
    float: left;
}

.footerspan {
    display: none;
}

button {
    padding: 0;
    padding-right: .5rem;
    padding-left: .5rem;
    margin-top: 1rem;
    font-family: sans-serif;
    font-size: 1.5rem;
}

form {
    background-color: #e2e2e2;  
}

.intro{
    padding-right: 25%;
    padding-left: 25%;
    padding-bottom: 1rem;
text-align: center;
}

.exploration { 
text-align: center;
    padding-top: 2rem;
}
.in input  {
    width: 100%;
    display: inline-block;  
}

.in label {
    float: left;   
}

.level {
    padding: 0;
    margin: 0;
    text-align: left;
}

form h2,
form p {
    text-align: center;
    margin-top: 3rem;
    padding-top: 1rem;
}

textarea {
    width: 100%;
    height: 26em;
    border-radius: .5em;
    border-style: none;
}

.navtop {
    padding-top: 1%;
    list-style-type: none;
    font-family: sans-serif; 
}

.navtop a,
.navtop a:visited{
    text-decoration:none;
    color: #0074D9;
}
   
header {
    background-color: #ccc;
    overflow: hidden;
}

footer {
    background-color: #BABABA;
    overflow: hidden;
    
}

.intro {
    background-color: #E6E6E6;
}

body {
    padding: 0;
    margin: 0;
}

a:focus{
    outline: 3px solid #000;
}

.skip-links {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.skip-links a {
    position: absolute;
    top: -3em;
    background-color: #000;
    color: #fff;
    text-decoration: none;
    padding: 0.5em 0.75em;
    font-size: 1.24em;
}

.skip-links a:focus {
    top: 0;
}

h1 { 
   text-align: center;
   font-family: sans-serif;
}

li .top {
     padding-bottom: 37px;

}

.medium-grey {
    background-color: #E6E6E6;
}

span {
    display:none;
}

.light-grey {
    background-color: #CFCFCF;
}

.grey {
    background-color:#e2e2e2;
}

.nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
    font-family: sans-serif; 
}

.nav a,
.nav a:visited{
    text-decoration:none;
    color: #0074D9;
}

@media only screen and (min-width: 22em) {
    
    .title {
        text-align: center;
    }
    
        h1 { 
        text-align: center;
}
    
    .nav li {
        display: inline-block;
        border: 0;
    }
    
    .nav {
        text-align: center;
    }
    
    center {
        text-align:center;   
}
    
    span {
       display: inline;
   } 
    
    .footerspan {
        display:inline-block;
}
     .navtop {
        text-align: center;
    }

    .top { 
        padding-top: 1%;
        padding-right: 5%;
        padding-bottom: 0;
    }
    
     .navtop li {
        display: inline-block;
        border: 0;
    }

    li .top {
        padding-botom: 0.5rem;
    
    }
}

@media only screen and (min-width: 50em) {
    

    
    .nav {
        float: left;
    }
    
    .nav-right {
        float: right;
        padding-right: 1em;    
    }
    
    span {
       display: inline;
   } 
    
     .footerspan {
        display:inline-block;
}    
    
    .top { 
        padding-top: 1%;
        padding-right: 5%;
        padding-bottom: 0;
    }
    
}

@media only screen and (min-width: 60em) {
    
    h1 {
    float: left;
    }
    
    dt {
        float: left;
        Clear: left;
        width: 8rem;
    }
        
    dd {
        float: left;
            
}
    
    .gutter-space {
        padding-left: 1em;
    }
    
     span {
        display: inline;
   } 
    
    .footerspan {
        display:inline-block;
}
       .top { 
        padding-top: 1%;
        padding-right: 5%;
        padding-bottom: 0;
    }

    
}
 

    
    

